--- a/dz-1/index.html
+++ b/dz-1/index.html
@@ -13,6 +13,6 @@
   <button id='button'>
     Render
   </button>
-  <script src="./js.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
