--- a/dz-2/index.html
+++ b/dz-2/index.html
@@ -5,13 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .palnets_table,
+    .palnets_table th,
+    .palnets_table td,
+    .palnets_table tr {
+      border: 3px solid black;
+      border-collapse: collapse;
+    }
+  </style>
 </head>
 <body>
-  <h1>
-    DZ
+  <h1 id='title_1'>
+    DZ-2
   </h1>
   <button id='button'>
-    Render
+    Render button
   </button>
   <script src="./index.js"></script>
 </body>
