--- a/dz-2/index.html
+++ b/dz-2/index.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    .palnets_table,
-    .palnets_table th,
-    .palnets_table td,
-    .palnets_table tr {
+    .planets-table,
+    .planets-table th,
+    .planets-table td {
       border: 3px solid black;
+    }
+    .planets-table {
       border-collapse: collapse;
     }
   </style>
 </head>
 <body>
-  <h1 id='title_1'>
+  <h1>
     DZ-2
   </h1>
   <button id='button'>
