--- a/ht-3/index.html
+++ b/ht-3/index.html
@@ -14,7 +14,7 @@
     .planets-table {
       border-collapse: collapse;
     }
-    .planets-table-td {
+    .planets-table-selected-td {
       background-color: black;
       color: white;
     }
