--- a/ht-4/index.html
+++ b/ht-4/index.html
@@ -11,7 +11,7 @@
   <h1>
     Home task 4
   </h1>
-  <ul id="tablist" data-number="#tablist-1">
+  <ul>
     <li>
       <button  data-toggle="tab" data-target="#home-tab-pane">Home</button>
     </li>
@@ -19,12 +19,12 @@
       <button  data-toggle="tab" data-target="#profile-tab-pane">Profile</button>
     </li>
   </ul>
-  <div id="tablist-1">
-    <div class="fade active" id="home-tab-pane">11111111111111112</div>
-    <div class="fade" id="profile-tab-pane">222222222222222222</div>
+  <div>
+    <div class="fade active" id="home-tab-pane">1</div>
+    <div class="fade" id="profile-tab-pane">2</div>
   </div>
 
-  <ul id="tablist" data-number="#tablist-2">
+  <ul>
     <li>
       <button  data-toggle="tab" data-target="#home-tab-pane2">Home</button>
     </li>
@@ -32,9 +32,9 @@
       <button  data-toggle="tab" data-target="#profile-tab-pane2">Profile</button>
     </li>
   </ul>
-  <div id="tablist-2">
-    <div class="fade active" id="home-tab-pane2">1111111111111111</div>
-    <div class="fade" id="profile-tab-pane2">222222222222222222</div>
+  <div>
+    <div class="fade active" id="home-tab-pane2">11</div>
+    <div class="fade" id="profile-tab-pane2">22</div>
   </div>
   <script src="./index.js"></script>
 </body>
