--- a/ht-5/index.html
+++ b/ht-5/index.html
@@ -14,7 +14,7 @@
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
     Launch demo modal
   </button>
-  <div class="fade" id="exampleModal" tabindex="-1" data-dismiss="modal">
+  <div class="modal" id="exampleModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -23,6 +23,26 @@
         </div>
         <div class="modal-body">
           Text text text
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-1">
+    Launch demo modal
+  </button>
+  <div class="modal" id="exampleModal-1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1>Modal title</h1>
+          <button type="button" class="btn-close" data-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          Text-2 text-2 text-2
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
