--- a/ht-7/index.html
+++ b/ht-7/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
   <p>
-    <a class="btn" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    <a class="btn" data-toggle="collapse" href="#collapse" role="button" aria-expanded="false" aria-controls="collapse">
       Link with href
     </a>
-    <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <button class="btn" type="button" data-toggle="collapse" data-target="#collapse" aria-expanded="false" aria-controls="collapse">
       Button with data-bs-target
     </button>
   </p>
-  <div class="collapse" id="collapseExample">
+  <div class="collapse" id="collapse">
     <div class="card">
       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
     </div>
   </div>
   <p>
-    <a class="btn" data-toggle="collapse" href="#collapseExample-1" role="button" aria-expanded="false" aria-controls="collapseExample">
+    <a class="btn" data-toggle="collapse" href="#collapse-1" role="button" aria-expanded="false" aria-controls="collapse">
       Link with href
     </a>
-    <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample-1" aria-expanded="false" aria-controls="collapseExample">
+    <button class="btn" type="button" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false" aria-controls="collapse">
       Button with data-bs-target
     </button>
   </p>
-  <div class="collapse" id="collapseExample-1">
+  <div class="collapse" id="collapse-1">
     <div class="card">
       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
     </div>
