--- a/ht-8/index.html
+++ b/ht-8/index.html
@@ -11,21 +11,21 @@
   <div class="accordion-wraper">
     <div class="accordion" id="accordion-1">
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
+        <h2 class="accordion-header" id="heading-1">
           <button 
           class="accordion-button" 
           type="button" 
           data-toggle="collapse" 
-          data-target="#collapseOne" 
+          data-target="#collapse-1" 
           aria-expanded="false" 
-          aria-controls="collapseOne">
+          aria-controls="collapse-1">
             Accordion Item #1
           </button>
         </h2>
         <div 
-        id="collapseOne" 
+        id="collapse-1" 
         class="accordion-collapse collapse" 
-        aria-labelledby="headingOne" 
+        aria-labelledby="heading-1" 
         data-parent="#accordion-1">
           <div class="accordion-body">
             <strong>This is the first item's accordion body.</strong> 
@@ -39,21 +39,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
+        <h2 class="accordion-header" id="heading-2">
           <button 
           class="accordion-button collapsed" 
           type="button" 
           data-toggle="collapse" 
-          data-target="#collapseTwo" 
+          data-target="#collapse-2" 
           aria-expanded="false" 
-          aria-controls="collapseTwo">
+          aria-controls="collapse-2">
             Accordion Item #2
           </button>
         </h2>
         <div 
-        id="collapseTwo" 
+        id="collapse-2" 
         class="accordion-collapse collapse" 
-        aria-labelledby="headingTwo" 
+        aria-labelledby="heading-2" 
         data-parent="#accordion-1">
           <div class="accordion-body">
             <strong>This is the second item's accordion body.</strong> 
@@ -68,21 +68,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
+        <h2 class="accordion-header" id="heading-3">
           <button 
           class="accordion-button collapsed" 
           type="button" 
           data-toggle="collapse" 
-          data-target="#collapseThree" 
+          data-target="#collapse-3" 
           aria-expanded="false" 
-          aria-controls="collapseThree">
+          aria-controls="collapse-3">
             Accordion Item #3
           </button>
         </h2>
         <div 
-        id="collapseThree" 
+        id="collapse-3" 
         class="accordion-collapse collapse" 
-        aria-labelledby="headingThree" 
+        aria-labelledby="heading-3" 
         data-parent="#accordion-1">
           <div class="accordion-body">
             <strong>This is the third item's accordion body.</strong> 
@@ -99,21 +99,21 @@
     </div>
     <div class="accordion" id="accordion-2">
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
+        <h2 class="accordion-header" id="heading-4">
           <button 
           class="accordion-button" 
           type="button" 
           data-toggle="collapse" 
-          data-target="#collapseOne" 
+          data-target="#collapse-4" 
           aria-expanded="false" 
           aria-controls="collapseOne">
             Accordion Item #1
           </button>
         </h2>
         <div 
-        id="collapseOne" 
+        id="collapse-4" 
         class="accordion-collapse collapse" 
-        aria-labelledby="headingOne" 
+        aria-labelledby="heading-4" 
         data-parent="#accordion-2">
           <div class="accordion-body">
             <strong>This is the first item's accordion body.</strong> 
@@ -127,21 +127,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
+        <h2 class="accordion-header" id="heading-5">
           <button 
           class="accordion-button collapsed" 
           type="button" 
           data-toggle="collapse" 
-          data-target="#collapseTwo" 
+          data-target="#collapse-5" 
           aria-expanded="false" 
-          aria-controls="collapseTwo">
+          aria-controls="collapse-5">
             Accordion Item #2
           </button>
         </h2>
         <div 
-        id="collapseTwo" 
+        id="collapse-5" 
         class="accordion-collapse collapse" 
-        aria-labelledby="headingTwo" 
+        aria-labelledby="heading-5" 
         data-parent="#accordion-2">
           <div class="accordion-body">
             <strong>This is the second item's accordion body.</strong> 
@@ -156,21 +156,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
+        <h2 class="accordion-header" id="heading-6">
           <button 
           class="accordion-button collapsed" 
           type="button" 
           data-toggle="collapse" 
-          data-target="#collapseThree" 
+          data-target="#collapse-6" 
           aria-expanded="false" 
-          aria-controls="collapseThree">
+          aria-controls="collapse-6">
             Accordion Item #3
           </button>
         </h2>
         <div 
-        id="collapseThree" 
+        id="collapse-6" 
         class="accordion-collapse collapse" 
-        aria-labelledby="headingThree" 
+        aria-labelledby="heading-6" 
         data-parent="#accordion-2">
           <div class="accordion-body">
             <strong>This is the third item's accordion body.</strong> 
