--- a/ht-8/index.html
+++ b/ht-8/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div class="accordion-wraper">
+  <div class="accordion-wrapper">
     <div class="accordion" id="accordion-1">
       <div class="accordion-item">
         <h2 class="accordion-header" id="heading-1">
