--- a/ht-9/index.html
+++ b/ht-9/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
   <div class="scrollspy-wrpper">
-    <div class="list-group-wraper">
-      <div class="list-group-holder">
-        <div id="list-1" class="list-group">
+    <div>
+      <ul id="list-1" class="list-group">
+        <li>
           <a class="list-group-item" href="#list-item-1">Item 1</a>
+        </li>
+        <li>
           <a class="list-group-item" href="#list-item-2">Item 2</a>
+        </li>
+        <li>
           <a class="list-group-item" href="#list-item-3">Item 3</a>
+        </li>
+        <li>
           <a class="list-group-item" href="#list-item-4">Item 4</a>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
     <div data-spy="scroll" data-target="#list-1" data-offset="0" class="scrollspy" tabindex="0">
       <h4 id="list-item-1">Item 1</h4>
