--- a/ht-11/index.html
+++ b/ht-11/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div class="input-wrapper">
+  <div class="header">
     <h1 class="title-1">
       Enter a search query
     </h1>
     <input type="text" class="searching-input" id="search-input">
   </div>
-  <div class='img-wrapper'></div>
+  <ul class='images-wrapper'></ul>
   <script src="./index.js"></script>
 </body>
 </html>
