--- a/ht-12/index.html
+++ b/ht-12/index.html
@@ -14,17 +14,17 @@
         <div class="carousel-item active">
           <img src="https://images.prom.ua/2987666805_minony-20-vafelnaya.jpg" 
                 class="slide-img" 
-                alt="...">
+                alt="slide 1">
         </div>
         <div class="carousel-item">
-          <img src="https://avatarko.ru/img/kartinka/2/zhivotnye_kot_prikol_ochki_1637.jpg" 
+          <img src="https://st2.depositphotos.com/5482604/8042/i/450/depositphotos_80421608-stock-photo-funny-cats-self-picture.jpg" 
                 class="slide-img" 
-                alt="...">
+                alt="slide 2">
         </div>
         <div class="carousel-item">
           <img src="https://koshka.top/uploads/posts/2021-12/1639395551_1-koshka-top-p-kot-chitaet-knigu-1.jpg" 
                 class="slide-img" 
-                alt="...">
+                alt="slide 2">
         </div>
       </div>
       <button class="carousel-control-prev carousel-button" type="button" data-target="#myCarousel" data-slide="prev">
